Changelog for Phoenity Icons

3.14
Replaced some deprecated code.

3.13
Fixed/removed some deprecated -moz-prefix & @media rules.
Removed obsolete Chatbutton icon loader.
Set maximum version to Thunderbird 123.*.

3.12
Fixed custom folder icon.
Fixed delete button icon.
Set maximum version to Thunderbird 121.*.

3.11
Fixed Unified Toolbar padding.
Fixed the size for some small icons.
Set minimum version to Thunderbird 115.0.
Set maximum version to Thunderbird 118.*.

3.10
Fixed some icons, added some icons.
Set maximum version to Thunderbird 116.*.

3.9
Removed some obsolete address book styles & icons.
Split icon images into separate images for all icons.
Added support for Supernova.
Added more button and menu item icons.
Set maximum version to Thunderbird 115.*.

3.8
Set minimum version to Thunderbird 102.
Set maximum version to Thunderbird 107.
Fixed some small icons appearing slightly blurred.
Fixed some CardBook toolbar icons.
Improved support for density, fixed Betterbird multiline appearance.

3.7
Fixed icons sometimes not showing on startup by backing out a fix for TB 102.

3.6
Removed some more obsolete icons and CSS rules.
Fixed missing Chat button icon in separate message windows.

3.5
Set minimum version to Thunderbird 91.
Set maximum version to Thunderbird 103.
Removed some obsolete CSS rules.
Fixed missing Chat button icon on Thunderbird 102.
Removed obsolete version checking.

3.4
Fixed min/max/close buttons for Thunderbird 91 on Linux.
Fixed Today Pane button for Thunderbird 91.

3.3
Fixed minimum row height for Thunderbird 91.

3.2
Improved support for CardBook, CardBook toolbar now uses fixed icon size.
Improved format toolbar button icons, added Remove Text Styling button.
Improved support for large & small icons, increased small icon size.

3.1
Updated WindowListener API to 1.56, this fixes the icons for Thunderbird 91.

3.0
First release for Thunderbird 78, migrated using the WindowListener API.