@@ -78,7 +78,7 @@
   --icon-quit: url("chrome://phoenityicons/content/skin/icons/error.png");
   --icon-quote: url("chrome://phoenityicons/content/skin/icons/quote.png");
   --icon-sent: url("chrome://phoenityicons/content/skin/icons/sent.png");
-  --icon-spam: url("chrome://phoenityicons/content/skin/icons/junk.png");
+  --icon-spam: url("chrome://phoenityicons/content/skin/icons/junk-col.svg");
   --icon-reply: url("chrome://phoenityicons/content/skin/icons/button-reply.png");
   --icon-reply-all: url("chrome://phoenityicons/content/skin/icons/button-replyall.png");
   --icon-reply-list: url("chrome://phoenityicons/content/skin/icons/button-replylist.png");
@@ -91,12 +91,11 @@
   --icon-settings: url("chrome://phoenityicons/content/skin/icons/options.png");
   --icon-search: url("chrome://phoenityicons/content/skin/icons/Search-glass.png");
   --icon-sync: url("chrome://phoenityicons/content/skin/cardbook/reload.png");
-  --icon-subthread-ignored: url("chrome://phoenityicons/content/skin/icons/subthread-ignored.png");
   --icon-tag: url("chrome://phoenityicons/content/skin/icons/button-tag.png");
   --icon-tasks: url("chrome://phoenityicons/content/skin/calendar/task-small.png");
   --icon-template: url("chrome://phoenityicons/content/skin/icons/templates.png");
   --icon-thread: url("chrome://phoenityicons/content/skin/icons/thread.png");
-  --icon-thread-ignored: url("chrome://phoenityicons/content/skin/icons/thread-ignored.png");
+  --icon-thread-ignored: url("chrome://phoenityicons/content/skin/icons/thread-ignored.svg");
   --icon-tools: url("chrome://phoenityicons/content/skin/icons/tools.png");
   --icon-trash: url("chrome://phoenityicons/content/skin/icons/trash.png");
   --icon-unread: url("chrome://phoenityicons/content/skin/icons/button-mark.png");
@@ -134,6 +133,7 @@
   --icon-sort: url("chrome://messenger/skin/icons/new/compact/sort.svg");
   --icon-spelling: url("chrome://messenger/skin/icons/new/compact/spelling.svg");
   --icon-star: url("chrome://phoenityicons/content/skin/icons/star.png");
+  --icon-subthread-ignored: url("chrome://phoenityicons/content/skin/icons/subthread-ignored.png");
   --icon-subtract-circle-sm: url("chrome://messenger/skin/icons/new/subtract-circle-sm.svg");
   --icon-tentative: url("chrome://messenger/skin/icons/new/compact/tentative.svg");
   --icon-user-list: url("chrome://messenger/skin/icons/new/compact/user-list.svg");
@@ -247,6 +247,7 @@ unified-toolbar-customization {
   --folder-pane-folder-rss: var(--icon-folder-rss);
 
   --icon-folder-compact-sm: var(--icon-compress);
+  --icon-spam-sm: url("chrome://phoenityicons/content/skin/icons/junk-col.svg");
 
 /*
   --icon-attachment-sm: url("chrome://messenger/skin/icons/new/attachment-sm.svg");
@@ -271,7 +272,6 @@ unified-toolbar-customization {
   --icon-notify: url("chrome://messenger/skin/icons/new/notify.svg");
   --icon-recurrence: url("chrome://messenger/skin/icons/new/recurrence.svg");
   --icon-recurrence-exception: url("chrome://messenger/skin/icons/new/recurrence-exception.svg");
-  --icon-spam-sm: url("chrome://messenger/skin/icons/new/spam-sm.svg");
   --icon-star-sm: url("chrome://messenger/skin/icons/new/star-sm.svg");
   --icon-thread-sm: url("chrome://messenger/skin/icons/new/thread-sm.svg");
   --icon-trash-sm: url("chrome://messenger/skin/icons/new/trash-sm.svg");
