@@ -2,6 +2,9 @@ Changelog for Phoenity Icons
 
 3.14
 Replaced some deprecated code.
+Fixed some icons, added some icons.
+Fixed some more deprecated -moz-prefix rules.
+Set maximum version to Thunderbird 130.*.
 
 3.13
 Fixed/removed some deprecated -moz-prefix & @media rules.
